# ESP32_Device

./: .gitignore  .gitmodules  CMakeLists.txt  NamingConventions.txt  README.md  sdkconfig  sdkconfig.old
components/Add_Command/: CMakeLists.txt
components/BH1750_Module/: BH1750_Module (alt).x  BH1750_Module.c  CMakeLists.txt  README.md
components/BH1750_Module/include/: BH1750_Module.h
components/BMP180_Module/: BMP180_Module (alt).-x  BMP180_Module.c  CMakeLists.txt  README.md
components/BMP180_Module/include/: BMP180_Module.h
components/ESP32_I2C_Master_Module/: CMakeLists.txt  ESP32_I2C_Master_Module (alt).x  ESP32_I2C_Master_Module.c
components/ESP32_I2C_Master_Module/include/: ESP32_I2C_Master_Module.h
components/ESP32_S0_Module/: CMakeLists.txt  ESP32_S0_Module.c  README.md
components/ESP32_S0_Module/include/: ESP32_S0_Module.h
components/ESP32_SPI_Module/: ESP32_SPI_Module.c  xMakeLists.txt
components/ESP32_SPI_Module/include/: ESP32_SPI_Module.h
components/ESP32_SwITCH_Module/: CMakeLists.txt  ESP32_SwITCH_Module.c  ESP32_SwITCH_WEBIF_get_cb.c  ESP32_SwITCH_cgi.c  ESP32_SwITCH_jso.c  ESP32_SwITCH_set.c  ESP32_SwITCH_tpl.c  README.md
components/ESP32_SwITCH_Module/alt/: ESP32_SwITCH_WEBIF_get altzuset.c
components/ESP32_SwITCH_Module/include/: ESP32_SwITCH_Module.h  ESP32_SwITCH_WEBIF_get_cb.h  ESP32_SwITCH_cgi.h  ESP32_SwITCH_jso.h  ESP32_SwITCH_set.h  ESP32_SwITCH_tpl.h
components/ESP32_SwITCH_Module/include/alt/: ESP32_SwITCH_WEBIF_getaltzuset.h
components/ESP32_TouchGUI1_Module/: ESP32_TouchGUI1_Module.c
components/ESP32_TouchGUI1_Module/include/: ESP32_TouchGUI1_Module.h
components/SSD1306_Module/: CMakeLists.txt  README.md  SSD1306_Module (Kopie).x  SSD1306_Module.c
components/SSD1306_Module/include/: SSD1306_Module.h  font8x8_basic.h
components/Sub_Command/: CMakeLists.txt
components/WebIf_Content/: CMakeLists.txt
components/WebIf_Module/: CMakeLists.txt  WebIf_Module.c
main/: CMakeLists.txt  SCDE_Main.c
main/include/: ProjectConfig.h  SCDE_s.h  SCDE_s.hx
main/lib/commands/Define_Command/: Define_Command.c
main/lib/core/: ActivateCommand.c  AnalyzeCommand.c  ArgParse.c  GoodDeviceName.c  GoodReadingName.c  Log3.c  MakeReadingName.c  SCDE.c
main/scde_core2/commands/Attr_Command/: Attr_Command.c
main/scde_core2/commands/Include_Command/: Include_Command.c
main/scde_core2/core/: ActivateModule.c  AnalyzeCommandChain.c  HexDumpOut.c  InitSCDERoot.c
main/scde_optional/: CMakeLists.txt
main/scde_optional/commands/: CMakeLists.txt
main/scde_optional/modules/: CMakeLists.txt
main/scde_optional/modules/WebIf_Modulex/: CMakeLists.txt  WebIf_Module.c
muell/: REMOVE OBSOLETE TODO.txt
