idf_component_register(SRCS "BMP180_Module.c"
   
                     INCLUDE_DIRS "include"
                                  "../../main/include"
                                  "../WebIf_Module/include"
                                  "../ESP32_I2C_Master_Module/include"
                                  "../ESP32_DeVICE_Module/include"
                                  "../WebIf_Content/include")
